# hardware_geniuses

./: CMakeLists.txt  README.md  platformio.ini
include/: Functions.h  Libraries.h  Prototypes.h  Variables.h
smart socket prototype/: smart socket prototype.kicad_pcb  smart socket prototype.kicad_prl  smart socket prototype.kicad_pro  smart socket prototype.kicad_sch
smart_socket/: smart_socket.ino
src/: main.cpp
